2ºSemestre/C/Práticas/Bloco2/ex4/PreffixCalculator.g4
grammar PreffixCalculator;
program:
        stat* EOF
    ;
stat:
        expr? NEWLINE
    ;
expr:
        expr expr op = ('*'|'/'|'+'|'-') #ExprPreffix
    |   Number                           #ExprNumber
    ;

Number: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
